# ai-engineering-buildcamp

./: pyproject.toml
.devcontainer/: devcontainer.json
01-foundation/01-llm/: groq.ipynb
01-foundation/03-structured-output/: notebook.ipynb  streaming.ipynb
02-rag-usecases-tech/: qdrant.ipynb
02-rag-usecases-tech/youtube/: notebook.ipynb  rag.py  subtitles_r0gHbW_MmaQ.txt  youtube-rag.ipynb
03-agents/02-agent-basics/: basics-intro.ipynb  qna-loop.ipynb  structured_output.ipynb
03-agents/03-agent-frameworks/: pydantic-ai.ipynb  toyaikit.ipynb
03-agents/homework/: wiki_hw.ipynb
03-strcutured-output/: homework.ipynb  notebook.ipynb  streaming.ipynb
04-testing/homework/: .gitignore  conftest.py  cost_tracker.py  judge.py  pyproject.toml  sql_agent.py  sql_tools.py  test_agent.py  utils.py
05-monitoring/homework/: pyproject.toml  tracing.ipynb  trivia_agent.py  trivia_tools.py  utils.py
06-evaluation/homework/: judge.py  label_evals.ipynb  pyproject.toml  recipe_agent.py  results.json  results_judged.json  results_judged_revised.json  results_labelled.json  run_scenarios.py  scenarios.csv  synthetic_data_gen.ipynb  synthetic_evals.ipynb  synthetic_results.json  synthetic_results_judged.json  synthetic_scenarios.csv
documentation-agent/: MakeFIle  app.py  doc_agent.py  models.py  pyproject.toml
documentation-agent/evals/: create_eval_data.ipynb  eval_judge.ipynb  evals_run_2026_05_09_synthetic.json  evals_run_2026_05_09_synthetic_judged.json  evals_run_2026_08_05.json  evals_run_2026_08_05_judge_results.csv  evals_run_2026_08_05_results.json  evals_run_2026_08_05_results_evaluated.csv  evaluate_judge.py  llm_judge.py  llm_judge_checks.py  questions_generated.csv  run_evals.py  run_evals_synthetic.py  run_judge_checks.py  synthetic_data_gen.ipynb
documentation-agent/notebooks/: logfire_data_export.ipynb
documentation-agent/tests/: conftest.py  cost_tracker.py  judge.py  test-agent.py  test_agent.py  test_judge.py  utils.py
(+2 files in other folders)
