[project]
name = "ai-engineering-buildcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.4",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "jaxn>=0.0.5",
    "jupyter>=1.1.1",
    "markitdown[pdf]>=0.1.5",
    "minsearch>=0.0.10",
    "openai>=2.32.0",
    "pydantic-ai>=1.87.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "qdrant-client[fastembed]>=1.17.1",
    "requests>=2.33.1",
    "toyaikit>=0.0.10",
    "youtube-transcript-api>=1.2.4",
]
